Update minor detail;

--- a/_config.yml
+++ b/_config.yml
@@ -52,7 +52,9 @@ author:
       major: Computer Science
       started: 2012
       duration: (2012 - 2016)
-      description: Something something 
+      description: Recipient of the International Student Scholarship
+                   Major GPA - 3.2
+                    
 
   languages:
     - language1:
